[package]
name = "runtime-common"
version = "0.1.0"
edition = "2021"
authors = ["Armonia Authors"]
license = "GPL-3.0"

[dependencies]
# Parity
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }

# Substrate
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }
## Substrate FRAME
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }
# Frontier
fp-rpc = { git = "https://github.com/armoniax/frontier", branch = "eva-polkadot-v0.9.19", default-features = false }
pallet-base-fee = { git = "https://github.com/armoniax/frontier", branch = "eva-polkadot-v0.9.19", default-features = false }
pallet-ethereum = { git = "https://github.com/armoniax/frontier", branch = "eva-polkadot-v0.9.19", default-features = false }
pallet-evm = { git = "https://github.com/armoniax/frontier", branch = "eva-polkadot-v0.9.19", default-features = false }
pallet-evm-precompile-modexp = { git = "https://github.com/armoniax/frontier", branch = "eva-polkadot-v0.9.19", default-features = false }
pallet-evm-precompile-sha3fips = { git = "https://github.com/armoniax/frontier", branch = "eva-polkadot-v0.9.19", default-features = false }
pallet-evm-precompile-simple = { git = "https://github.com/armoniax/frontier", branch = "eva-polkadot-v0.9.19", default-features = false }
# Local
primitives-core = { path = "../../primitives/core", default-features = false }

[features]
default = ["std"]
std = [
    # Parity
    "codec/std",
    # Substrate
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
    ## Substrate FRAME
    "frame-support/std",
    "frame-system/std",
    # Frontier
    "fp-rpc/std",
    "pallet-base-fee/std",
    "pallet-ethereum/std",
    "pallet-evm/std",
    "pallet-evm-precompile-modexp/std",
    "pallet-evm-precompile-simple/std",
    "pallet-evm-precompile-sha3fips/std",
    # Local
    "primitives-core/std",
]
