[package]
name = "amax-eva-runtime-constants"
version = "0.1.0"
edition = "2021"
authors = ["Armonia Authors"]
license = "GPL-3.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# Substrate
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22", default-features = false }
## Substrate FRAME
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22", default-features = false }

# Local
primitives-core = { path = "../../primitives/core", default-features = false }

[features]
default = ["std"]
std = [
    # Substrate
    "sp-runtime/std",
    ## Substrate FRAME
    "frame-support/std",
    # Local
    "primitives-core/std",
]
