[package]
name = "amax-eva-rpc-core-trace"
version = "0.1.0"
edition = "2021"
authors = ["Armonia Authors"]
license = "GPL-3.0"
description = "armonia multichain - eva child chain"

[dependencies]
futures = { version = "0.3.1", features = ["compat"] }
jsonrpsee = { version = "0.13.0", features = ["server", "macros"] }
serde = { version = "1.0", features = ["derive"] }

# Parity
ethereum-types = "0.13.1"

# Local
amax-eva-client-evm-tracing = { path = "../../evm-tracing" }
amax-eva-rpc-core-types = { path = "../types" }
