[package]
name = "amax-eva-rpc-core-types"
version = "0.1.0"
edition = "2021"
authors = ["Armonia Authors"]
license = "GPL-3.0"
description = "armonia multichain - eva child chain"

[dependencies]
hex = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.10"

# Parity
codec = { package = "parity-scale-codec", version = "3.1" }
ethereum = { version = "0.12.0", features = ["with-codec", "with-serde"] }
ethereum-types = "0.13.1"
evm = { version = "0.35.0", default-features = false, features = ["with-codec"] }
rlp = "0.5"

# Substrate
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
