[package]
# notice the name must be `account` for this crate, for the `scale-info` just parses the type based on the crate name.
# While in `polkadot.js`, just parses str `account::AccountId20` to support ethereum type.
name = "account"
version = "0.1.1"
edition = "2021"
authors = ["PureStake", "Armonia Authors"]
license = "GPL-3.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
hex = { version = "0.4", default-features = false, features = ["alloc"] }
log = "0.4"
serde = { version = "1.0", default-features = false, features = [
    "derive",
], optional = true }

# Parity
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
    "derive",
] }
impl-serde = { version = "0.3.2", default-features = false }
libsecp256k1 = { version = "0.7", default-features = false, features = [
    "hmac",
] }
scale-info = { version = "2.0", default-features = false, features = [
    "derive",
] }

# Substrate
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22", default-features = false }
sp-runtime-interface = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22", default-features = false }

[features]
default = ["std"]
std = [
    "full_crypto",
    "hex/std",
    "serde/std",
    # Parity    
    "codec/std",
    "impl-serde/std",
    "libsecp256k1/std",
    "scale-info/std",
    # Substrate
    "sp-core/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-std/std",
]
full_crypto = ["sp-runtime-interface/disable_target_static_assertions"]
