[package]
name = "eva-runtime-constants"
version = "0.1.0"
edition = "2021"
authors = ["Armonia Authors"]
license = "GPL-3.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
runtime-common-constants = { path = "../../common/constants", default-features = false }

[features]
default = ["std"]
std = [
    "runtime-common-constants/std",
]
